Now launches with Forge/FML installed (fixed putting extra scheme in jar paths)